--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
-    "chai": "^4.3.0",
     "dotenv": "^8.2.0",
-    "mocha": "^8.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
@@ -45,6 +43,8 @@
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "chai": "^4.3.0",
+    "mocha": "^8.3.0",
   }
 }
